--- a/index.html
+++ b/index.html
@@ -19,21 +19,24 @@
       </nav>
 
       <address class="header-address">
-        <a class="header-address-link" href="info@devstudio.com"
-          >info@devstudio.com</a
-        ><br />
-        <a class="header-address-link" href="tel:+110001111111"
-          >+11 (000) 111-11-11</a
-        ><br />
+        <ul>
+          <li>
+            <a class="header-address-link" href="info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </address>
     </header>
 
     <main class="main">
       <section class="main-first">
-        <h1 class="main-first-text">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1 class="main-first-text">Effective Solutions for Your Business</h1>
         <button class="button">Order Service</button>
       </section>
 
@@ -41,38 +44,34 @@
         <h2 hidden>Benefits</h2>
         <ul>
           <li>
-            <h3 class="main-benefits-h3">Strategy</h3>
+            <h3 class="main-benefits-element">Strategy</h3>
             <p class="main-benefits-text">
-              Our goal is to identify the business <br />
-              problem to walk away with the <br />
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="main-benefits-h3">Punctuality</h3>
+            <h3 class="main-benefits-element">Punctuality</h3>
             <p class="main-benefits-text">
-              Bring the key message to the <br />
-              brand's audience for the best price <br />
+              Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="main-benefits-h3">Diligence</h3>
+            <h3 class="main-benefits-element">Diligence</h3>
             <p class="main-benefits-text">
-              Research and confirm brands that <br />
-              present the strongest digital growth <br />
-              opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="main-benefits-h3">Technologies</h3>
+            <h3 class="main-benefits-element">Technologies</h3>
             <p class="main-benefits-text">
-              Design practice focused on digital <br />
-              experiences. We bring forth a deep <br />
-              passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -124,7 +123,7 @@
               height="260"
               alt="Mark Guerrero"
             />
-            <h3 class="main-team-h3">Mark Guerrero</h3>
+            <h3 class="main-team-person">Mark Guerrero</h3>
             <p class="main-team-text">Product Designer</p>
           </li>
 
@@ -136,7 +135,7 @@
               height="260"
               alt="Tom Ford"
             />
-            <h3 class="main-team-h3">Tom Ford</h3>
+            <h3 class="main-team-person">Tom Ford</h3>
             <p class="main-team-text">Frontend Developer</p>
           </li>
 
@@ -148,7 +147,7 @@
               height="260"
               alt="Camila Garcia"
             />
-            <h3 class="main-team-h3">Camila Garcia</h3>
+            <h3 class="main-team-person">Camila Garcia</h3>
             <p class="main-team-text">Marketing</p>
           </li>
 
@@ -160,7 +159,7 @@
               height="260"
               alt="Daniel Wilson"
             />
-            <h3 class="main-team-h3">Daniel Wilson</h3>
+            <h3 class="main-team-person">Daniel Wilson</h3>
             <p class="main-team-text">UI Designer</p>
           </li>
         </ul>
@@ -170,8 +169,7 @@
     <footer class="footer">
       <a class="logo" href="index.html">WEBSTUDIO</a>
       <p class="footer-text">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
