--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
 
       <section class="main-doing">
-        <h2 class="main-doing-h2">What are we doing</h2>
+        <h2 class="main-doing-title">What are we doing</h2>
 
         <ul>
           <li>
@@ -112,7 +112,7 @@
       </section>
 
       <section class="main-team">
-        <h2 class="main-team-h2">Our Team</h2>
+        <h2 class="main-team-title">Our Team</h2>
 
         <ul>
           <li>
