--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="main">
       <section class="main-first">
         <h1 class="main-first-text">Effective Solutions for Your Business</h1>
-        <button class="button">Order Service</button>
+        <button class="main-button" type="button">Order Service</button>
       </section>
 
       <section class="main-benefits">
